feat(persistence): Optimize interceptor handling and enhance error reporting with null checks